<resources>
    <string name="app_name">CnD App</string>
    <string name="title_activity_login">Login</string>
    <string name="title_activity_register">Register</string>
    <string name="title_activity_forget_password">Reset Password</string>
    <string name="title_activity_profile">Profile</string>
    <!-- Strings related to login -->
    <string name="hint_email">Email</string>
    <string name="hint_new_email">New Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_new_password">New Password</string>
    <string name="btn_register">Register</string>
    <string name="btn_login">Login</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back">Back</string>
    <string name="btn_change_email">Change Email</string>
    <string name="btn_change_password">Change Password</string>
    <string name="btn_send_password_reset_email">Send Password Reset Email</string>
    <string name="btn_delete_user">Delete User</string>
    <string name="btn_logout">Logout</string>
    <string name="btn_profile">Profile</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="action_forgot_password">Forgot your password?</string>
    <string name="btn_register_long">Not a CnD App user? Click here to register.</string>
    <string name="btn_login_long">Already registered? Click here to login.</string>
    <string name="description_app_icon">CnD App Icon</string>
    <string name="auth_failed">Authentication failed, check your email and password.</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email to sent you password reset instructions.</string>
    <string name="action_clear_all">Clear All</string>
    <string name="action_mark_all_read">Mark All as Read</string>

    <!-- Navigation Drawer menu labels -->
    <string name="nav_home">Home</string>
    <string name="nav_notifications">Notifications</string>
    <string name="nav_about_us">About Us</string>
    <string name="title_activity_navigation">NavigationActivity</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">username_placeholder</string>
    <string name="nav_header_subtitle">email_placeholder</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>
</resources>
