<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ProfileActivity">

    <ProgressBar
        android:id="@+id/progress_bar"
        style="@style/Widget.AppCompat.ProgressBar.Horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:indeterminate="true"
        android:visibility="gone" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingBottom="@dimen/activity_vertical_margin">

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/old_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_email_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/hint_new_email"
                android:inputType="textEmailAddress"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/old_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/old_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/new_password_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <EditText
                android:id="@+id/new_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:focusableInTouchMode="true"
                android:hint="@string/hint_new_password"
                android:inputType="textPassword"
                android:singleLine="true" />
        </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/change_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_change_email"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_change_password"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/send"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_send_password_reset_email"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_back"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="16dp"
            android:text="@string/btn_back"
            android:textStyle="bold" />

        <Button
            android:id="@+id/delete"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="16dp"
            android:text="@string/btn_delete_user"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_change_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:text="@string/btn_change_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_change_password"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="16dp"
            android:text="@string/btn_change_password"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_send_password_reset_email"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="16dp"
            android:text="@string/btn_send_password_reset_email"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btn_delete_user"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="16dp"
            android:text="@string/btn_delete_user"
            android:textStyle="bold" />

        <Button
            android:id="@+id/logout"
            android:layout_width="match_parent"
            android:layout_height="@dimen/btn_height"
            android:layout_marginTop="16dp"
            android:backgroundTint="@color/colorAccent"
            android:text="@string/btn_logout"
            android:textColor="@color/colorPrimaryText"
            android:textStyle="bold" />
    </LinearLayout>

</android.support.constraint.ConstraintLayout>